fix: fix /api/v1/user/profile
